                          WebAuth Change History

WebAuth 3.2.0 (in progress)

 *) Removed WebAuthProxyHeaders directive. Added new documentation
    to mod_webauth.xml that recommends people use mod_headers instead.
    See "Using WebAuth with Proxy Servers" in that document.

 *) Modified WebAuthDontCache so it also adds "Pragma: no-cache" and
    "Cache-Control: no-cache" headers in addition to the "Expires" header.

 *) Modified WebAuthDoLogout so when it is enabled so is WebAuthDontCache 

 *) When returning redirects, make sure to set r->header_only so there
    is no extra content generated by Apache. Also set the same
    Expires, Pragma, and Cache-Control headers that WebAuthDontCache sets.

 *) Removed extra logging from mod_webauth/webkdc.c, and moved other
    extraneous logging so its only logged at a level of APLOG_DEBUG when
    WebAuthDebug is turned on.

 *) Added package-webauth and package-webkdc targets for maintainers to
    generate WebAuth module packages.

 *) DESTDIR support fixed for WebKDC installations.

 *) Tweaks to the WebKDC templates and images.

WebAuth 3.1.2 (2003-05-29)

 *) mod_webauthldap: Added mutexes around the entire ldap operation to 
    avoid GSSAPI thread safety issues.  All server_rec structures are now 
    initialized, correctly supporting multiple virtual host 
    configurations.  Refactored ldap binds for better failback support,
    fixing a double free memory error.  Additional memory cleanup for 
    krb5 TGT operations. Fixed memory leak related to unbind after 
    connection expiry, via ignoring SIGPIPE.

 *) mod_webauth: Correctly construct the return url for reverse proxies 
    (explicitly compare r->proxyreq to PROXYREQ_PROXY instead of testing 
    for != PROXYREQ_NONE, which also matched PROXYREQ_REVERSE.

 *) mod_webauth: Don't try to attr decode a zero length service token 
    cache file.  Log a warning and return NULL like there was no file.
